# hify

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  api_res.json  apple-music-design.md  build-and-run.ps1  build-and-run.sh  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_lrc.txt  test_lyrics.json  test_sp_lyrics.py  version.sh  zensical.toml
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  translation_request.yml
.github/workflows/: build.yml  codeflash.yaml  docs.yml  test.yml
.jules/: bolt.md
docs/: api-reference.md  changelog.md  contributing.md  how-it-works.md  index.md
docs/features/: download-settings.md  file-organization.md  index.md  internationalization.md  lyrics.md  m3u-export.md  player.md  playlist-monitor.md
docs/getting-started/: docker-compose.md  environment-variables.md  index.md  installation.md  local-docker-build.md  one-click.md
docs/stylesheets/: extra.css
downtify/: api.py  downloader.py  lyrics.py  lyrics_db.py  m3u.py  monitor.py  smart_matching.py  spotify.py  telemetry.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.vue  index.css  main.js  vitest.setup.js
frontend/src/__tests__/: CubicSpline.test.js  lyrics.test.js  player.test.js
frontend/src/components/: DynamicCanvas.vue  Footer.vue  Hero.vue  LyricsView.vue  MobileNav.vue  Navbar.vue  NavbarFront.vue  PlayerBar.vue  QueueDrawer.vue  SearchInput.vue  SearchList.vue  Settings.vue  Sidebar.vue
frontend/src/i18n/: index.js
frontend/src/i18n/locales/: el.js  en.js  es.js  pt-BR.js
frontend/src/model/: api.js  dynamicTheme.js  layout.js  player.js  settings.js
frontend/src/router/: index.js
frontend/src/utils/lyrics/: AnimatorStore.js  CubicSpline.js  LrcParser.js  LyricsAnimator.js  Spring.js  TtmlParser.js
frontend/src/views/: Download.vue  Downloads.vue  Front.vue  Lyrics.vue  Monitor.vue  Player.vue  Search.vue
hify/: __init__.py  api.py  database.py  downloader.py  itunes.py  lyrics.py  lyrics_db.py  m3u.py  monitor.py  providers.py  spotify.py
temp_npm_test2/: package-lock.json  package.json
temp_npm_test3/: package-lock.json  package.json
temp_npm_test5/: package-lock.json  package.json
tests/: test_api_async.py  test_api_download_hints.py  test_api_endpoints.py  test_api_settings.py  test_bump_version.py  test_downloader.py  test_downloader_extended.py  test_itunes.py  test_lyrics_normalizers.py  test_m3u.py  test_main.py  test_monitor.py  test_monitor_db.py  test_providers.py  test_sanitize.py  test_smart_matching.py  test_spotify_embed.py  test_spotify_url.py  test_telemetry.py  test_ttml_parser.py
